migrate to java 8 & spring boot 3.2, now a server list is not empty (but still 404)